--- a/index.css
+++ b/index.css
@@ -1,4 +1,8 @@
-body {
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+/* body {
   margin: 0;
 }
 
@@ -77,3 +81,8 @@ body {
 .filter {
   display: flex;
 }
+
+.user-card {
+  padding: 10px;
+  border: 1px solid black;
+} */
